<resources>
    <string name="app_name">Bluetooth File Send</string>
    <string name="password">password</string>
    <string name="unmask">Unmask</string>
    <string name="select_file">Select File</string>
    <string name="password_text">Password:</string>
    <string name="file">File:</string>
    <string name="waiting">waiting...</string>
    <string name="send">Send</string>
    <string name="service_name">BTFileTransfer</string>
    <string name="bt_not_supported">Your device does not support Bluetooth</string>
</resources>
